# rust-kernel

./: CONTRIBUTING.md  GNUmakefile  LICENSE  LOGO.SYS  README.md  antos.iso  limine.cfg  out.txt
.github/workflows/: rust-clippy.yml  rust.yml
kernel/: ..kernel_expanded.rs  .gitignore  Cargo.toml  GNUmakefile  build.rs  rust-toolchain.toml.up
kernel/src/: alloc_impl.rs  bitmap.raw  bitmap_font.rs  fake_disk.rs  framebuffer.rs  kernel_logger.rs  legacy_pic.rs  main.rs  memory.rs  power.rs  renderer.rs  rsdp.rs  serial.rs  tty.rs  vtree.rs
kernel/src/acpi/: mod.rs  rsdt.rs
kernel/src/common/: consts.rs  driver.rs  gdt.rs  handler.rs  idt.rs  io.rs  mod.rs
kernel/src/debug/: gdb_impl.rs  mod.rs  protocol.rs
kernel/src/device/: block.rs  character.rs  input.rs  mod.rs  network.rs
kernel/src/graphics/: buffer.rs  buffer_manager.rs  mod.rs
kernel/src/paging/: frame_allocator.rs  indexer.rs  mod.rs  table_manager.rs
macros/: Cargo.toml
macros/src/: lib.rs
programs/example/: Cargo.toml  linker.ld
programs/example/src/: main.rs
