[package]
name = "antos-kernel-minimal-generic"
version = "0.1.0"
edition = "2021"

[dependencies]
bitmap = {version = "3.1.3", features = ["no_std"]}
itoa = "1.0.9"
numtoa = "*"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
limine = "0.1.11"
bitflags = "*"
bitfield = "0.14.0"
bit = "*"
psf-rs = "2.1.4"
