[package]
name = "antos-kernel-minimal-generic"
version = "0.1.0"
edition = "2021"

[dependencies]
bitmap = {version = "3.1.3", features = ["no_std"]}
itoa = "1.0.9"
numtoa = "*"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
limine = "0.1.11"
bitflags = "*"
bitfield = "0.14.0"
bit = "*"
psf-rs = "2.1.4"
ttf-parser = { version = "0.20.0", default-features = false }
heapless = "*"
git-version = "*"
antos-macros = { path = "../macros" }
lock_api = "0.4.11"
log = "0.4.20"
elf = { version = "0.7.4", default-features = false, features = ["nightly"] }

# I really want to not do this.... but here we go...
x86_64 = "0.14.11"

spin = "*"
# gdbstub = "0.7.0"
# gdbstub_arch = "*"